A couple more Week 1 drill problems

--- a/Drill/Week-1.html
+++ b/Drill/Week-1.html
@@ -72,7 +72,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <h3>Problem 1</h3>
 <p>Here is an excerpt from the baby-name data in <code>&quot;DCF::BabyNames&quot;</code>.</p>
 <!-- html table generated in R 3.1.0 by xtable 1.7-3 package -->
-<!-- Wed Sep  3 16:29:51 2014 -->
+<!-- Wed Sep  3 16:42:30 2014 -->
 <TABLE border="1">
 <TR> <TH> 
 name
@@ -801,7 +801,8 @@ M
 <div id="problem-9" class="section level3">
 <h3>Problem 9</h3>
 <p>Here are a few characters: . , ; _ - ^ [space] ( )</p>
-Which of those characters can be used in the name of an R object?
+<ul>
+<li>Which of those characters can be used in the name of an R object?
 <textarea cols="30" rows="2" id="ScoreR18" placeholder="Your answer here ..."></textarea>
 <p><select style="visibility: hidden" width="5" name="ScoreR18info"><option value="{
  &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
@@ -811,8 +812,9 @@ Which of those characters can be used in the name of an R object?
 &quot;type&quot;: &quot;Free text&quot;,
 &quot;hint&quot;: &quot;&quot;,
 &quot;reward&quot;: &quot;&quot; 
-}">Question info for free text</option></select></p>
-<p>Which of those characters can be used in a quoted character string?</p>
+}">Question info for free text</option></select></p></li>
+<li><p>Which of those characters can be used in a quoted character string?</p></li>
+</ul>
 <textarea cols="30" rows="2" id="ScoreR19" placeholder="Your answer here ..."></textarea>
 <p><select style="visibility: hidden" width="5" name="ScoreR19info"><option value="{
  &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
@@ -982,6 +984,27 @@ Which of those characters can be used in the name of an R object?
 &quot;type&quot;: &quot;Fixed Choice&quot; 
 }">Info for Select Set</option></select></p></li>
 </ul>
+</div>
+<div id="problem-12" class="section level3">
+<h3>Problem 12</h3>
+<p>These questions should be easy to answer if you use the appropriate commands to load, view, or get documentation on the datasets.</p>
+<ul>
+<li>How many variables are there in <code>CountryData</code>?</li>
+<li>What does the variable <code>tfat</code> measure in the <code>NHANES</code> data table?</li>
+<li>How many cases are there in <code>WorldCities</code>?</li>
+<li>What’s the third variable in <code>BabyNames</code>?</li>
+<li>What are the codes for the levels of the categorical variable <code>party</code> in the <code>registeredVoters</code> data table, and what does each code stand for?</li>
+</ul>
+<textarea cols="30" rows="2" id="ScoreR26" placeholder="Your answer here ..."></textarea>
+<p><select style="visibility: hidden" width="5" name="ScoreR26info"><option value="{
+ &quot;setID&quot;: &quot;DCF-Assignment1&quot;,
+&quot;itemN&quot;:     26,
+&quot;name&quot;: &quot;DataAndHelp&quot;,
+&quot;totalpts&quot;:      1,
+&quot;type&quot;: &quot;Free text&quot;,
+&quot;hint&quot;: &quot;&quot;,
+&quot;reward&quot;: &quot;&quot; 
+}">Question info for free text</option></select></p>
 </div>
 </div>
 
